--- a/index.html
+++ b/index.html
@@ -1,68 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Registration Form</title>
-    <link rel="stylesheet"
-    href="style.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In and Sign Up Form </title>
+    <link rel="stylesheet" href="style. css">
+    <script src=""https://kit.fontawesome.com/c4254e24a8.js crossorigin="anonymous"></script>
+
 </head>
 <body>
-<div class="main">
-<div class="register">
-    <h2>Register Here</h2>
-    <form id="register" method="post">
-    <label>First Name : </label>
-    <br>
-    <input type="text" name="fname" id="name" placeholder="Enter Your First Name">
-    <br><br>
-    <label>Middle Name : </label>
-    <br>
-    <input type="text" name="mname" id="name" placeholder="Enter Your Middle Name">
-    <br><br>
-    <label>Last Name : </label>
-    <br>
-    <input type="text" name="fname" id="name" placeholder="Enter Your Last Name">
-    <br><br>
-    <label>Your Age : </label>
-       <br>
-       <input type="number" name="age" id="name" placeholder="How Old are You?">
-       <br><br>
-       <label>Email : </label>
-       <br>
-       <input type="Email" name="Email" id="name" placeholder="Enter Your Valid Email ID">
-       <br><br>
-       <label>Gender : </label>
-       <br>
-       &nbsp;&nbsp;&nbsp;
-       <input type="radio" name="gender" id="male">
-       &nbsp;
-       <span id="male">Male</span>
-       &nbsp;&nbsp;&nbsp;&nbsp;
-       <input type="radio" name="gender" id="female">
-       &nbsp;
-       <span id="female">Female</span>
-       <br><br>
-       <label>Known Language : </label>
-       <br>
-       &nbsp;&nbsp;&nbsp;
-       <input type="checkbox" name="lang" id="Hindi">
-       &nbsp;
-       <span id="Hindi">Hindi</span>
-       &nbsp;&nbsp;&nbsp;&nbsp;
-       <input type="checkbox" name="lang" id="Eng">
-       &nbsp;
-       <span id="English">English</span>
-       &nbsp;&nbsp;&nbsp;&nbsp;
-       <input type="checkbox" name="lang" id="Odia">
-       &nbsp;
-       <span id="Odia">Odia</span>
-       &nbsp;&nbsp;&nbsp;&nbsp;
-       <input type="checkbox" name="lang" id="French">
-       &nbsp;
-       <span id="French">French</span>
-       <br><br>
-       <input type="submit" value="Submit" name="submit" id="submit">
-    </form>
+<div class="container">
+    <div class="form-box">
+        <h1>Sign Up</h1>
+        <form>
+            <div class="input-group">
+                <div class="input-field">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" placeholder="Name">
+                </div>
+
+                <div class="input-field">
+                    <i class="fa-solid fa-envelope"></i>
+                    <input type="email" placeholder="Email">
+
+                <div class="input-field">
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" placeholder="Password">
+                </div>
+                <p>Forgot Password <a href="#">Click Here </a></p>
+            </div>
+            <div class="btn-field">
+                <button type="button" id="signUpBtn">Sign Up</button>
+                <button type="button" id="signinBtn" class="disable">Sign In</button>
+            </div>
+        </form>
+    </div>
 </div>
-</div>
+
+<script>
+
+let signUpBtn = document.getElementById("signupBtn");
+let signinBtn = document.getElementById("signinBtn");
+let nameField = document.getElementById("nameField");
+let title = document.getElementById("title");
+
+
+signinBtn.onclick = function(){
+    nameField.style.maxHeight = "0";
+    title.innerHTML = "Sign In";
+    signUpBtn.classList.add("disable");
+    signUpBtn.classList.remove("disable");
+    
+}
+
+signupBtn.onclick = function(){
+    nameField.style.maxHeight = "60px";
+    title.innerHTML = "Sign Up";
+    signUpBtn.classList.add("disable");
+    signUpBtn.classList.remove("disable");
+    
+}
+</script>
 </body>
 </html>
